# symba

./: .gitignore  README.md  pyproject.toml
src/symba/: __init__.py  core.py  demos.py  one_dimensional.py  two_dimensional.py
src/symba/one_dimensional/: core.py  demos.py  drawerer.py  norm_zero_examples.py  oned_live.py  robustness.py  run_metrics.py  twod_live.py
src/symba/two_dimensional/: core.py
