[project]
name = "symba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Ashford", email = "ashfordj@rocketmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.46",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[project.scripts]
symba = "symba:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
